WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303457
AtomString(ASCIILiteral) constructor should not copy the string data.
https://bugs.webkit.org/show_bug.cgi?id=303457
Summary
AtomString(ASCIILiteral) constructor should not copy the string data.
Mark Lam
Reported
2025-12-02 23:36:54 PST
It should create an AtomStringImpl that just points to the ASCIILiteral's data as its backing store instead. This used to be how it worked, but was regressed by
250160@main
back in 2022.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-02 23:37:17 PST
<
rdar://problem/165744213
>
Mark Lam
Comment 2
2025-12-03 07:54:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54773
EWS
Comment 3
2025-12-03 18:38:07 PST
Committed
303880@main
(55173525c593): <
https://commits.webkit.org/303880@main
> Reviewed commits have been landed. Closing PR #54773 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug