AtomString(ASCIILiteral) constructor should not copy the string data. https://bugs.webkit.org/show_bug.cgi?id=303457 rdar://165744213

Reviewed by Marcus Plutowski.

It should create an AtomStringImpl that just points to the ASCIILiteral's data as its backing
store instead.  This used to be how it worked, but was regressed by 250160@main back in 2022.

Test: Tools/TestWebKitAPI/Tests/WTF/AtomString.cpp
* Source/WTF/wtf/text/AtomString.h:
(WTF::AtomString::AtomString):
* Tools/TestWebKitAPI/Tests/WTF/AtomString.cpp:
(TestWebKitAPI::TEST(WTF, AtomStringCreationFromLiteral)):

Canonical link: https://commits.webkit.org/303880@main